# english_learning_app

./: .dockerignore  .env.docker.example  .env.production  .gitignore  DEPLOY-QUICK-REFERENCE.md  Dockerfile  GOOGLE_OAUTH_FRONTEND_GUIDE.md  HƯỚNG-DẪN-DEPLOY-NHANH.md  README.MD  SECURITY_FIX_GUIDE.md  SETUP.md  backup-database.bat  check-redis-keys.bat  check-redis-keys.sh  deploy-vps.sh  docker-build.bat  docker-compose.prod.yml  docker-compose.shared-db.yml  docker-compose.yml  docker-deploy.bat  pom.xml  railway_import.sql  readme.MD  restore-database.bat  restore-database.sh  setup-docker-env.bat
card-words-ai/: .dockerignore  Dockerfile  RANDOM_FOREST.md  README.md  USAGE_GUIDE.md  pyproject.toml  requirements.txt  retrain-request.json  setup.ps1  setup.sh  test-api.ps1  test-api.sh  test-retrain.ps1  train-model.ps1  train-model.sh  train-rf-model.ps1  train-rf-model.sh
card-words-ai/app/: __init__.py  config.py  main.py
card-words-ai/app/core/: __init__.py
card-words-ai/app/core/ml/: __init__.py  feature_extractor.py  random_forest_model.py  xgboost_model.py
card-words-ai/app/core/services/: __init__.py  cache_service.py  (+1 more)
card-words-ai/app/db/: __init__.py  database_service.py
card-words-ai/app/middleware/: auth.py
card-words-ai/app/schemas/: __init__.py  requests.py  responses.py
card-words-ai/docs/: DEPLOYMENT.md  ENV_CONFIG.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  SHARED_ENV_MIGRATION.md
card-words-ai/models/: .gitkeep  random_forest_model_v1.pkl  rf_scaler_v1.pkl  scaler_v1.pkl  xgboost_model_v1.pkl  xgboost_model_v1.pkl.backup
(+671 files in other folders)
